# ros-yolo-in-gazebo

./: map.pgm  map.yaml
.gazebo/models/a_test/: model-1_4.sdf  model.config  model.sdf
.gazebo/models/al_test/: model-1_4.sdf  model.config  model.sdf
.gazebo/models/ap_test/: model-1_4.sdf  model.config  model.sdf
catkin_ws/: README.md  passion_bag.launch  passion_find.launch  tomato_test_bag.launch  tomato_test_find.launch  tomatosim_bag.launch  備註
catkin_ws/devel/: .catkin  _setup_util.py  setup.sh
catkin_ws/devel/include/darknet_ros_msgs/: BoundingBox.h  BoundingBoxes.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsActionGoal.h  CheckForObjectsActionResult.h  CheckForObjectsFeedback.h  CheckForObjectsGoal.h  CheckForObjectsResult.h
catkin_ws/devel/include/turtlebot3_example/: Turtlebot3Action.h  Turtlebot3ActionFeedback.h  Turtlebot3ActionGoal.h  Turtlebot3ActionResult.h  Turtlebot3Feedback.h  Turtlebot3Goal.h  Turtlebot3Result.h
catkin_ws/devel/include/turtlebot3_msgs/: SensorState.h  Sound.h  VersionInfo.h
catkin_ws/devel/include/zed_wrapper/: ZedConfig.h
catkin_ws/devel/lib/darknet_ros/: darknet_ros
catkin_ws/devel/lib/pkgconfig/: darknet_ros.pc  (+20 more)
catkin_ws/src/: .rosinstall.bak  frames.gv
catkin_ws/src/detecting_test/: CMakeLists.txt
catkin_ws/src/detecting_test/src/: image_publisher.cpp  image_subscriber.cpp
catkin_ws/src/map_label/: listener.py  map_label.py  map_label_angle.py  pgm2jpg.py
school_project/vision/: README.md  calibration.py  capture.py  img2cam.py  ocr.py  project.py  vision.py  vision_multi.py
(+82 files in other folders)
